force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/clofor_com_cfs__MasterAnken__c.object-meta.xml
<CustomObject>
    <customHelpPage>clofor_com_cfs__page_MBLOnlineHelp</customHelpPage>
    <description>M B/L - SHIPMENTS</description>
    <label>混載</label>
    <nameField>
        <label>MASTER SHIPMENT NAME</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>