force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__Autorollupcargoquantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Autorollupcargoquantity__c</fullName>
    <label>Auto-Rollup Cargo Quantity</label>
    <summarizedField>clofor_com_cfs__ConsolCNTR__c.clofor_com_cfs__CargoQuantity__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConsolCNTR__c.clofor_com_cfs__Consolidation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>