force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__Autorollupcbm__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Autorollupcbm__c</fullName>
    <label>Auto-Rollup CBM</label>
    <summarizedField>clofor_com_cfs__ConsolCNTR__c.clofor_com_cfs__MeasurementCBM__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConsolCNTR__c.clofor_com_cfs__Consolidation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>