force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__bondedtimetoCFS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__bondedtimetoCFS__c</fullName>
    <inlineHelpText>Put the date when cargo manifest to customs is done</inlineHelpText>
    <label>LCL MANIFEST SUBMISSION TIME</label>
    <type>DateTime</type>
</CustomField>