force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__Buying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Buying__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EXCHANGE RATE(BUYING)-PARTNER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>