force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__CFS_Devan_PreRequest__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CFS_Devan_PreRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRE-ALERT TO CFS WAREHOUSE</label>
    <type>Checkbox</type>
</CustomField>