force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__CLP_Devan_Request__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CLP_Devan_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLP &amp; VANNING/DEVAN REQUEST SENT</label>
    <type>Checkbox</type>
</CustomField>