force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__CYBONDEDTIME__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CYBONDEDTIME__c</fullName>
    <label>C/Y CONTAINER BONDED TIME</label>
    <type>DateTime</type>
</CustomField>