force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__Date_of_MBL_Issued__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Date_of_MBL_Issued__c</fullName>
    <label>Date of MBL Issued</label>
    <type>Date</type>
</CustomField>