force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__DEBIT_EDIT_FEEDBACK__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DEBIT_EDIT_FEEDBACK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEBIT REVISION REQUESTED</label>
    <type>Checkbox</type>
</CustomField>