force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__DEBIT_FINAL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DEBIT_FINAL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEBIT CONFIRMED</label>
    <type>Checkbox</type>
</CustomField>