force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__Document_Receipt_Time__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Document_Receipt_Time__c</fullName>
    <label>Document Receipt Time</label>
    <type>DateTime</type>
</CustomField>