force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__Field1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Field1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CUSTOMER</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MasterAnkenTorihikisaki</relationshipName>
    <type>Lookup</type>
</CustomField>