force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__First_Approval_Time__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__First_Approval_Time__c</fullName>
    <label>First Approval Time</label>
    <type>DateTime</type>
</CustomField>