force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__FMSSO2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FMSSO2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FMS S/O-2</label>
    <referenceTo>clofor_com_cfs__CustomObject1__c</referenceTo>
    <relationshipLabel>CONSOL (FMS S/O 2)</relationshipLabel>
    <relationshipName>ConsolFMSSO2</relationshipName>
    <type>Lookup</type>
</CustomField>