force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__Internal_Memo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Internal_Memo__c</fullName>
    <label>INTERNAL MEMO</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>