force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__KOREA_EXCHANGERATE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__KOREA_EXCHANGERATE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EXCHANGE RATE CONFIRMED</label>
    <type>Checkbox</type>
</CustomField>