force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__Mail_Merge_Company_Signature__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Mail_Merge_Company_Signature__c</fullName>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Company_Signature__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Merge Company Signature</label>
    <type>Text</type>
</CustomField>