force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MASTER_BOOKING_NO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MASTER_BOOKING_NO__c</fullName>
    <label>MASTER BOOKING NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>