force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__Master_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Master_Record_Type__c</fullName>
    <label>Master Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ocean Import</fullName>
                <default>true</default>
                <label>Ocean Import</label>
            </value>
            <value>
                <fullName>Ocean Export</fullName>
            </value>
            <value>
                <fullName>Air Import</fullName>
            </value>
            <value>
                <fullName>Air Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>