force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MCBM__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MCBM__c</fullName>
    <inlineHelpText>Measurement(1m*1m*1m) of Cargo</inlineHelpText>
    <label>MEASURMENT(CBM)</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>