force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MContainer_No__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MContainer_No__c</fullName>
    <inlineHelpText>Container Number/Seal Number</inlineHelpText>
    <label>Container No &amp; Seal No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>