force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MContainerNumber2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MContainerNumber2__c</fullName>
    <label>CONTAINER QNTY-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>