force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MDevanWarehouse__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MDevanWarehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VANNING/DEVAN WAREHOUSE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.clofor_com_cfs__MDevan__c</field>
            <operation>equals</operation>
            <valueField>clofor_com_cfs__LoadLocation__c.clofor_com_cfs__WharehouseCompany__r.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__LoadLocation__c</referenceTo>
    <relationshipLabel>CONSOLIDATION (VANNING/DEVAN WAREHOUSE)</relationshipLabel>
    <relationshipName>MDevanWarehouse</relationshipName>
    <type>Lookup</type>
</CustomField>