force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__META__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__META__c</fullName>
    <label>ETA</label>
    <type>Date</type>
</CustomField>