force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__META_DAY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__META_DAY__c</fullName>
    <formula>CASE(
  MOD(  clofor_com_cfs__META__c - DATE( 1900, 1, 7 ), 7 ),
  0, &quot;Sunday&quot;,
  1, &quot;Monday&quot;,
  2, &quot;Tuesday&quot;,
  3, &quot;Wednesday&quot;,
  4, &quot;Thursday&quot;,
  5, &quot;Friday&quot;, 
  &quot;Saturday&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EXPECTED ARRIVAL DAY</label>
    <type>Text</type>
</CustomField>