force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MExchangeRate_forwardingselling__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MExchangeRate_forwardingselling__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EXCHANGE RATE(SELLING)-FORWARDING</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>