force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MHDS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MHDS__c</fullName>
    <inlineHelpText>Hot Delivery Service(Only some carriers provide this service between Japan and China)</inlineHelpText>
    <label>HDS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>あり(Yes)</fullName>
            </value>
            <value>
                <fullName>なし(No)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>