force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MMaster_B_L_No__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MMaster_B_L_No__c</fullName>
    <label>M BL/M AWB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>