force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MNotifyParty__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MNotifyParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M-Notify Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MNotifyParty</relationshipName>
    <type>Lookup</type>
</CustomField>