force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MNotifyPartyEnglishCompanyName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MNotifyPartyEnglishCompanyName__c</fullName>
    <formula>clofor_com_cfs__MNotifyParty__r.clofor_com_cfs__EnglishCompanyName__c 
&amp; BR() &amp; BR() &amp; 
clofor_com_cfs__MNotifyParty__r.clofor_com_cfs__EnglishAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notify Party English Company Name&amp;Addres</label>
    <type>Text</type>
</CustomField>