force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MPartnerEnglishAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MPartnerEnglishAddress__c</fullName>
    <formula>clofor_com_cfs__MPartner__r.clofor_com_cfs__EnglishAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner English Address</label>
    <type>Text</type>
</CustomField>