force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MPlace_Of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MPlace_Of_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place Of Receipt</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipName>M_B_L_SHIPMENTS_RECEIPT</relationshipName>
    <type>Lookup</type>
</CustomField>