force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MPOD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MPOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port Of Dispatch</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipName>M_B_L_SHIPMENTS_POD</relationshipName>
    <type>Lookup</type>
</CustomField>