force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MShipper__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MShipper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M-Shipper</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MShipper</relationshipName>
    <type>Lookup</type>
</CustomField>