force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MTRANSIT_PORT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MTRANSIT_PORT__c</fullName>
    <label>TRANSIT PORT</label>
    <length>15</length>
    <type>Text</type>
</CustomField>