force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MTRANSIT_VESSEL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MTRANSIT_VESSEL__c</fullName>
    <inlineHelpText>Enter First Vessel in case there are more than 1 vessels involved</inlineHelpText>
    <label>1ST VESSEL/FLIGHT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>