force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__MVessel__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MVessel__c</fullName>
    <label>MVessel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>