force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__PICK_ORDER__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICK_ORDER__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pickup order must be sent to CY operator no later than Document Cut Date.</inlineHelpText>
    <label>PICKUP ORDER RECEIPT CONFIMRED</label>
    <type>Checkbox</type>
</CustomField>