force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__PICK_ORDER_ReceiptConfirmation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PICK_ORDER_ReceiptConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the receipt confirmation email/fax from CY Operator has arrived.</inlineHelpText>
    <label>PICKUP ORDER ARRANGEMENT CONFIRMED</label>
    <type>Checkbox</type>
</CustomField>