force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__rollupgw__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__rollupgw__c</fullName>
    <label>Roll up G.W</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>