force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__SECONDSWITCH_BL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SECONDSWITCH_BL__c</fullName>
    <inlineHelpText>Input the B/L number after switch, if any.</inlineHelpText>
    <label>2ND MASTER B/L NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>