force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__SEND_DOC_TO_CFS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SEND_DOC_TO_CFS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Required documents are H A/N, H B/L , D/O, M A/N , CLP</inlineHelpText>
    <label>VANNING/DEVAN DOCS SENT TO DEVAN COMPANY</label>
    <type>Checkbox</type>
</CustomField>