force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__SIClosingDateTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SIClosingDateTime__c</fullName>
    <label>S/I Closing Date/Time</label>
    <type>DateTime</type>
</CustomField>