force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/fields/clofor_com_cfs__Vessel_Type__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Vessel_Type__c</fullName>
    <label>Vessel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ferry</fullName>
            </value>
            <value>
                <fullName>Container Vessel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>