force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__CBM_must_be_the_same_with_roll_up.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__CBM_must_be_the_same_with_roll_up</fullName>
    <active>false</active>
    <description>Check rollup information, is that the same with manual or not.
Check fields: cargo quantity</description>
    <errorConditionFormula>AND(NOT(ISBLANK( clofor_com_cfs__rollupcbm__c )),  clofor_com_cfs__rollupcbm__c  &gt;  clofor_com_cfs__MCBM__c )</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__MCBM__c</errorDisplayField>
    <errorMessage>We&apos;re sorry, we noticed that the &quot;CBM&quot; you entered is less than the total rollup from the F/TMS S/O. Please check a gain, thanks!</errorMessage>
</ValidationRule>