force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__Combi_MContainerType1N_ContainerNumber1Y.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Combi_MContainerType1N_ContainerNumber1Y</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISBLANK(clofor_com_cfs__MContainerNumber__c)),ISBLANK(TEXT(clofor_com_cfs__MContainer__c)), false)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__MContainer__c</errorDisplayField>
    <errorMessage>コンテナタイプ１を入力してください。 
Please enter Container Type 1 if you chosed Container Qnty 1.</errorMessage>
</ValidationRule>