force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__Combi_MContainerType1Y_ContainerNumber1N.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Combi_MContainerType1Y_ContainerNumber1N</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT( ISBLANK(TEXT(clofor_com_cfs__MContainer__c)) ), 
(ISBLANK(clofor_com_cfs__MContainerNumber__c) ), false)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__MContainerNumber__c</errorDisplayField>
    <errorMessage>コンテナ本数1を入力してください。 
Please enter Container Qnty 1 if you chosed Container Type 1.</errorMessage>
</ValidationRule>