force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__Combi_MContainerType2N_ContainerNumber2Y.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Combi_MContainerType2N_ContainerNumber2Y</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISBLANK(clofor_com_cfs__MContainerNumber2__c)),ISBLANK(TEXT(clofor_com_cfs__MContainer2__c)), false)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__MContainer2__c</errorDisplayField>
    <errorMessage>コンテナタイプ2を入力してください。 
Please enter Container Type 2 if you chosed Container Qnty 2.</errorMessage>
</ValidationRule>