force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__Combi_MContainerType2Y_ContainerNumber2N.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Combi_MContainerType2Y_ContainerNumber2N</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT( ISBLANK(TEXT(clofor_com_cfs__MContainer2__c)) ), 
(ISBLANK(clofor_com_cfs__MContainerNumber2__c) ), false)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__MContainerNumber2__c</errorDisplayField>
    <errorMessage>コンテナ本数2を入力してください。 
Please enter Container Qnty 2 if you choosed Container Type 2.</errorMessage>
</ValidationRule>