force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__DATE_VALI_MCYBONDED_Must_LaterThan_META.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__DATE_VALI_MCYBONDED_Must_LaterThan_META</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(clofor_com_cfs__Master_Record_Type__c)=&quot;Ocean Import&quot;,DATEVALUE(clofor_com_cfs__CYBONDEDTIME__c) &lt; clofor_com_cfs__META__c)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__CYBONDEDTIME__c</errorDisplayField>
    <errorMessage>コンテナ搬入日は入港日より遅い日付を選択してください。 
M CY BONDED DATE must be later than META. Please re-enter the correct data.</errorMessage>
</ValidationRule>