force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__DATE_VALI_MDEVAN_Must_LaterThan_CYBONDED.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__DATE_VALI_MDEVAN_Must_LaterThan_CYBONDED</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(clofor_com_cfs__Master_Record_Type__c)=&quot;Ocean Import&quot;,clofor_com_cfs__MDevanningDate__c &lt; DATEVALUE(clofor_com_cfs__CYBONDEDTIME__c))</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__MDevanningDate__c</errorDisplayField>
    <errorMessage>デバン日はコンテナ搬入日より遅い日付を選択してください。 
DEVAN DATE must be later than M CY BONDED DATE. Please re-enter the correct data.</errorMessage>
</ValidationRule>