force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__DATE_VALI_META_Must_LaterThan_METD.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__DATE_VALI_META_Must_LaterThan_METD</fullName>
    <active>true</active>
    <description>ETA must be equal or greater than ETD</description>
    <errorConditionFormula>clofor_com_cfs__META__c &lt; clofor_com_cfs__METD__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__META__c</errorDisplayField>
    <errorMessage>入港日は出港日より遅い日付を選択してください。 
META must be later than METD. Please re-enter the correct data.</errorMessage>
</ValidationRule>