force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__DATE_VALI_META_Must_LaterThan_MTETD.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__DATE_VALI_META_Must_LaterThan_MTETD</fullName>
    <active>true</active>
    <errorConditionFormula>clofor_com_cfs__META__c &lt; clofor_com_cfs__MTRANSIT_T_ETD__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__MTRANSIT_T_ETD__c</errorDisplayField>
    <errorMessage>入港日はTransit出港日より遅い日付を選択してください。
META must be later than ETD AT TRANSIT PORT. Please re-enter the correct data.</errorMessage>
</ValidationRule>