force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__DATE_VALI_MMANIFES_Must_LaterThan_MDEVAN.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__DATE_VALI_MMANIFES_Must_LaterThan_MDEVAN</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(clofor_com_cfs__Master_Record_Type__c)=&quot;Ocean Import&quot;,DATEVALUE(clofor_com_cfs__bondedtimetoCFS__c) &lt; clofor_com_cfs__MDevanningDate__c)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__bondedtimetoCFS__c</errorDisplayField>
    <errorMessage>一括搬入時間はデバン日より遅い日付を選択してください。
CFS MANIFEST SUBMISSION DATE Must be later than DEVAN DATE. Please re-enter the correct data.</errorMessage>
</ValidationRule>