force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__DATE_VALI_MTETD_Must_LaterThan_METD.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__DATE_VALI_MTETD_Must_LaterThan_METD</fullName>
    <active>true</active>
    <errorConditionFormula>clofor_com_cfs__MTRANSIT_T_ETD__c &lt; clofor_com_cfs__METD__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__MTRANSIT_T_ETD__c</errorDisplayField>
    <errorMessage>Transit出港日は出港日より遅い日付を選択してください。 
T-ETD must be later than ETD. Please re-enter the correct data.</errorMessage>
</ValidationRule>