force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__MPLACE_OF_RECEIPT_Must_Differ_MDELIVERY.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__MPLACE_OF_RECEIPT_Must_Differ_MDELIVERY</fullName>
    <active>true</active>
    <description>MPLACE OF RECEIPT and MPLACE OF DELIVERY must be different from each other.</description>
    <errorConditionFormula>IF( 
 AND( NOT( ISBLANK(clofor_com_cfs__MPlace_Of_Receipt__c) ), 
 NOT( ISBLANK(clofor_com_cfs__MPlace_Of_Delivery__c) ), 
 clofor_com_cfs__MPlace_Of_Receipt__c = clofor_com_cfs__MPlace_Of_Delivery__c) , 
true, 
false)</errorConditionFormula>
    <errorMessage>PLACE OF RECEIPTとPLACE OF DELIVERYは一致してはいけません。ご確認の上、正しく再入力してください。 
PLACE OF RECEIPT must be different from PLACE OF DELIVERY. Please re-enter the correct data.</errorMessage>
</ValidationRule>