force-app/main/default/objects/clofor_com_cfs__MasterAnken__c/validationRules/clofor_com_cfs__MPOD_And_MPOL_Must_Different.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__MPOD_And_MPOL_Must_Different</fullName>
    <active>true</active>
    <description>MPOL and MPOL must be different from each other.</description>
    <errorConditionFormula>IF( 
AND( NOT( ISBLANK(clofor_com_cfs__MPOD__c) ), 
NOT( ISBLANK(clofor_com_cfs__MPOL__c) ), 
clofor_com_cfs__MPOD__c = clofor_com_cfs__MPOL__c) , 
true, 
false)</errorConditionFormula>
    <errorMessage>出港地と入港地は一致してはいけません。ご確認の上、正しく再入力してください。 
POD-CITY must be different from POL-CITY. Please re-enter the correct data.</errorMessage>
</ValidationRule>